# cURLimate

./: README.md
curlimate/: MANIFEST.in  README.md  pyproject.toml
curlimate/src/curlimate/: __main__.py  colors.py  imageStuff.py  server.py
curlimate/src/curlimate/sites/: wrongClient.html
docs/: index.html
